Final release: Complete documentation and cleanup
- Updated README with full feature documentation
- Added MIT LICENSE
- Updated .gitignore for sensitive files
- Project ready for production use

Features:
✅ 194 playlists created on Spotify
✅ Daily automation via GitHub Actions
✅ Monthly, genre-split, and master genre playlists
✅ No duplicates on re-runs
✅ Interactive dashboard
✅ 4 analysis notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,20 @@ data/streaming_history/*.json
 # Environment variables
 .env
 .env.local
+
+# Spotify cache (contains tokens)
+.cache
+.cache-*
+notebooks/.cache
+
+# Virtual environments
+.venv/
+venv/
+env/
+
+# macOS
+.DS_Store
+*.DS_Store
+
+# Jupyter
+.ipynb_checkpoints/
