refactor: rename project to spotim8 for consistency
- Remove redundant AJSpotim8/ directory (duplicate of web app)
- Rename spotifyframes/ Python package to spotim8/
- Rename spotim8/ React app to web/
- Update all imports and references to spotim8
- Update pyproject.toml with spotim8 naming
- Update CLI command from spotifyframes to spotim8
- Remove personal name references from public files
- Keep personalization via environment variables only
- Clean up spotifyframes.egg-info and __pycache__

--- a/env.example
+++ b/env.example
@@ -8,7 +8,6 @@ SPOTIPY_REDIRECT_URI=http://127.0.0.1:8888/callback
 SPOTIPY_REFRESH_TOKEN=your_refresh_token_here
 
 # Optional: Customize playlist naming
-# Default: AJFindsDec25, HipHopFindsDec25, etc.
+# Default: FindsDec25, HipHopFindsDec25, etc.
 PLAYLIST_OWNER_NAME=YourName
 PLAYLIST_PREFIX=Finds
-
