--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -1,4 +1,4 @@
-name: AJsSpotim8 Daily Update
+name: Daily Spotify Playlist Update
 
 on:
   # Run daily at 2am UTC
@@ -42,7 +42,7 @@ jobs:
           SPOTIPY_CLIENT_SECRET: ${{ secrets.SPOTIPY_CLIENT_SECRET }}
           SPOTIPY_REDIRECT_URI: ${{ secrets.SPOTIPY_REDIRECT_URI }}
           SPOTIPY_REFRESH_TOKEN: ${{ secrets.SPOTIPY_REFRESH_TOKEN }}
-          # Optional: customize playlist naming (defaults: AJ, Finds)
+          # Optional: customize playlist naming 
           PLAYLIST_OWNER_NAME: ${{ secrets.PLAYLIST_OWNER_NAME }}
           PLAYLIST_PREFIX: ${{ secrets.PLAYLIST_PREFIX }}
         run: |
