--- a/spotim8_app/env.example
+++ b/spotim8_app/env.example
@@ -1,5 +1,9 @@
 # Spotify API Credentials
 # Get your Client ID from https://developer.spotify.com/dashboard
-# Set the Redirect URI to your GitHub Pages URL (e.g., https://yourusername.github.io/spotim8/)
 
 VITE_SPOTIFY_CLIENT_ID=your_spotify_client_id_here
+
+# Optional: Override redirect URI for local development
+# For local dev with existing Spotify app, use: http://127.0.0.1:8888/callback
+# For production (GitHub Pages), leave this unset - it will auto-detect
+VITE_REDIRECT_URI=http://127.0.0.1:8888/callback
