Clean up project: consolidate docs, remove redundancy
- Consolidate all documentation into single README.md
- Remove redundant documentation files (SETUP.md, API_SETUP.md, CONTRIBUTING.md, SECURITY.md)
- Remove redundant requirements.txt (dependencies now in pyproject.toml)
- Replace shell scripts with Python equivalents (run_sync_local.py, setup_local.py)
- Update all code references to point to README.md
- Add python-dotenv to pyproject.toml dependencies
- Update .gitignore to exclude user-specific data files

--- a/.gitignore
+++ b/.gitignore
@@ -54,12 +54,13 @@ Thumbs.db
 notebooks/.cache
 
 # ----- Data Files -----
-# Track parquet files (synced library data)
-# These are the base files that get updated by the sync workflow
-!data/*.parquet
+# Ignore parquet files (user-specific synced library data)
+# These are generated locally and shouldn't be committed
+data/*.parquet
 
 # Ignore local cache and metadata (regenerated on sync)
 data/.api_cache/
+data/catalog_meta.json
 data/meta.json
 
 # Streaming history (user imports these manually)
