--- a/env.example
+++ b/env.example
@@ -7,10 +7,70 @@ SPOTIPY_REDIRECT_URI=http://127.0.0.1:8888/callback
 # For automated/local runs without browser (get via scripts/get_token.py)
 SPOTIPY_REFRESH_TOKEN=your_refresh_token_here
 
-# Optional: Customize playlist naming
-# Default: FindsDec25, HipHopFindsDec25, etc.
+# Playlist Configuration
+# Monthly playlists: Last 3 months only (e.g., AJFndsNov24, AJFndsDec24, AJFndsJan25)
+# Yearly playlists: Older months consolidated (e.g., AJFnds24, AJTop24, AJVbz24, AJRpt24, AJDscvr24)
+#
+# IMPORTANT: Data Sources
+# - "Finds" playlists: Use API data (liked songs) - always up-to-date, synced frequently
+# - Other playlists (Top/Vibes/OnRepeat/Discover): Use streaming history from periodic exports
+#   - Streaming history exports lag behind API data (updated less frequently)
+#   - Recent months may be incomplete until new export is available
+#   - Export new streaming history data to keep these playlists current
 PLAYLIST_OWNER_NAME=AJ
-PLAYLIST_PREFIX=Finds
+
+# Playlist Type Enable/Disable Flags
+PLAYLIST_ENABLE_MONTHLY=true            # Enable "Finds" playlists (liked songs)
+PLAYLIST_ENABLE_MOST_PLAYED=true        # Enable "Top" playlists (most played)
+PLAYLIST_ENABLE_TIME_BASED=true         # Enable "Vibes" playlists (time-based)
+PLAYLIST_ENABLE_REPEAT=true             # Enable "OnRepeat" playlists
+PLAYLIST_ENABLE_DISCOVERY=true          # Enable "Discovery" playlists
+
+# Playlist Type Prefixes (monthly → yearly consolidation)
+PLAYLIST_PREFIX_MONTHLY=Fnds           # Liked songs: AJFndsDec25 → AJFnds25
+PLAYLIST_PREFIX_MOST_PLAYED=Top         # Most played: AJTopDec25 → AJTop25
+PLAYLIST_PREFIX_TIME_BASED=Vbz         # Time-based: AJVbzDec25 → AJVbz25
+PLAYLIST_PREFIX_REPEAT=Rpt              # On repeat: AJRptDec25 → AJRpt25
+PLAYLIST_PREFIX_DISCOVERY=Dscvr         # Discovery: AJDscvrDec25 → AJDscvr25
+
+# Genre Playlists
+PLAYLIST_PREFIX_GENRE_MONTHLY=Finds     # Genre-split: HipHopFindsDec25
+PLAYLIST_PREFIX_GENRE_MASTER=am         # Master genres: AJamHip-Hop
+
+# Monthly Retention
+KEEP_MONTHLY_MONTHS=3                   # Keep last N months as monthly playlists
+
+# Playlist Formatting Options
+# Date Format: "short" (Nov24), "medium" (Nov 2024), "long" (November 2024), "numeric" (2024-11)
+PLAYLIST_DATE_FORMAT=short              # How to display dates in playlist names
+
+# Separators: "none" (no separator), "space" ( ), "dash" (-), "underscore" (_)
+PLAYLIST_SEPARATOR_MONTH=none           # Separator between month and year (e.g., Nov24 vs Nov 24)
+PLAYLIST_SEPARATOR_PREFIX=none          # Separator between owner/prefix and date (e.g., AJFnds vs AJ Fnds)
+
+# Capitalization: "title" (Title Case), "upper" (UPPERCASE), "lower" (lowercase), "preserve" (as-is)
+PLAYLIST_CAPITALIZATION=preserve         # Capitalization style for playlist names
+
+# Custom Playlist Name Format Strings
+# Available placeholders: {owner}, {prefix}, {mon}, {year}, {genre}
+# Examples:
+#   "{owner}{prefix}{mon}{year}" → "AJFndsNov24"
+#   "{owner} {prefix} {mon} {year}" → "AJ Fnds Nov 24" (with space separators)
+#   "{prefix} {mon} {year}" → "Fnds Nov 24" (no owner)
+#   "{genre} {prefix} {mon} {year}" → "HipHop Finds Nov 24" (for genre playlists)
+# Leave unset to use defaults shown below
+PLAYLIST_TEMPLATE_MONTHLY={owner}{prefix}{mon}{year}              # Monthly playlists (Finds, Top, etc.)
+PLAYLIST_TEMPLATE_YEARLY={owner}{prefix}{year}                    # Yearly consolidated playlists
+PLAYLIST_TEMPLATE_GENRE_MONTHLY={genre}{prefix}{mon}{year}        # Genre-split monthly playlists
+PLAYLIST_TEMPLATE_GENRE_MASTER={owner}{prefix}{genre}              # Master genre playlists
+PLAYLIST_TEMPLATE_MOST_PLAYED={owner}{prefix}{mon}{year}          # Most played playlists
+PLAYLIST_TEMPLATE_TIME_BASED={owner}{prefix}{mon}{year}            # Time-based playlists
+PLAYLIST_TEMPLATE_REPEAT={owner}{prefix}{mon}{year}               # On repeat playlists
+PLAYLIST_TEMPLATE_DISCOVERY={owner}{prefix}{mon}{year}            # Discovery playlists
+
+# Description Format: Template for playlist descriptions
+# Available placeholders: {description}, {period}, {date}, {type}, {genre}
+PLAYLIST_DESCRIPTION_TEMPLATE={description} from {period} (automatically updated; manual additions welcome)
 
 # Optional: Email notifications (for cron job)
 # For Gmail: Enable 2FA and generate an App Password
