--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "spotim8"
-version = "3.0.0"
+version = "4.0.0"
 description = "Pandas-first Spotify Web API interface: tidy DataFrames for library + market signals."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -19,7 +19,7 @@ notebook = ["jupyter>=1.0", "matplotlib>=3.8", "seaborn>=0.13", "plotly>=5.18"]
 all = ["spotim8[dev,notebook]"]
 
 [project.scripts]
-spotim8 = "spotim8.cli:main"
+spotim8 = "spotim8.core.cli:main"
 
 [build-system]
 requires = ["setuptools>=69"]
