feat: Add comprehensive data protection and production-grade features
- Add automatic backup system for all destructive operations
- Implement verification before playlist deletion/merge
- Add safe track removal with backup and validation
- Create backup management tools
- Add rich playlist descriptions with statistics
- Implement playlist health checks and organization tools
- Add production-grade error handling and logging
- Enhance playlist aesthetics with metadata
- Zero data loss guarantee for all operations
- Update documentation with data protection guide

--- a/env.example
+++ b/env.example
@@ -8,7 +8,17 @@ SPOTIPY_CLIENT_SECRET=your_client_secret_here
 SPOTIPY_REDIRECT_URI=http://127.0.0.1:8888/callback
 
 # Optional: For automated/local runs without browser
-# Get via: python spotim8/scripts/utils/get_token.py
+# Get via: python src/scripts/utils/get_token.py
+
+# ============================================================================
+# PLAYLIST AESTHETICS & ORGANIZATION
+# ============================================================================
+
+# Enable rich playlist descriptions with statistics (track count, duration, etc.)
+ENABLE_RICH_PLAYLIST_DESCRIPTIONS=true
+
+# Run health check after sync (checks for empty playlists, duplicates, etc.)
+ENABLE_HEALTH_CHECK=false
 SPOTIPY_REFRESH_TOKEN=your_refresh_token_here
 
 # ============================================================================
