SpotiM8 v5.0.0: SaaS-grade refactor, dashboard, src/data, notebooks cleanup
- Bump version to 5.0.0; SpotiM8 branding
- Add src/data package (export_table, MarketFrames) for CLI export/market
- Add Streamlit dashboard (dashboard/app.py)
- Add _sync_impl package; sync.py as thin facade
- Canonical paths: project_path.get_project_root(), get_data_dir()
- Notebooks: 5 analysis-only (remove 01_sync, 05_liked_songs); notebook_helpers views
- README, changelog, contributing: notebook list, dashboard, black/ruff src/
- .gitignore: allow src/data/*.py for package tracking

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,9 @@ spotim8/notebooks/.cache
 data/
 # But allow a README if needed for documentation
 !data/README.md
+# Allow src/data Python package (export + market) - track .py only
+!src/data/
+!src/data/*.py
 # Explicitly ignore all parquet files (user data)
 *.parquet
 # Explicitly ignore all JSON files in data/ (personal Spotify exports)
