--- a/env.example
+++ b/env.example
@@ -17,6 +17,11 @@ SPOTIPY_REDIRECT_URI=http://127.0.0.1:8888/callback
 # Enable rich playlist descriptions with statistics (track count, duration, etc.)
 ENABLE_RICH_PLAYLIST_DESCRIPTIONS=true
 
+# Daylist-style mood tags in playlist descriptions (Chill, Energetic, Focus, etc.)
+# Inferred from track genres; optional neural model (e.g. Music2Emo) can be wired in
+ENABLE_MOOD_TAGS=true
+# MOOD_MAX_TAGS=5
+
 # Run health check after sync (checks for empty playlists, duplicates, etc.)
 ENABLE_HEALTH_CHECK=false
 
@@ -26,6 +31,14 @@ ENABLE_INSIGHTS_REPORT=false
 # Generate genre discovery report (clusters, hybrids, emerging genres)
 ENABLE_GENRE_DISCOVERY=false
 SPOTIPY_REFRESH_TOKEN=your_refresh_token_here
+
+# ============================================================================
+# Data Directory (Optional)
+# ============================================================================
+# By default, data (parquet files, cache, backups) is stored under SPOTIM8/data.
+# Override with an absolute path if you want data elsewhere:
+# SPOTIM8_DATA_DIR=/path/to/your/data
+# DATA_DIR=/path/to/your/data
 
 # ============================================================================
 # Playlist Configuration (Optional)
@@ -91,4 +104,5 @@ PLAYLIST_PREFIX=Finds
 # PLAYLIST_TEMPLATE_GENRE_MASTER={owner}{prefix}{genre}
 # PLAYLIST_TEMPLATE_MOST_PLAYED={owner}{prefix}{mon}{year}
 # PLAYLIST_TEMPLATE_DISCOVERY={owner}{prefix}{mon}{year}
-# PLAYLIST_DESCRIPTION_TEMPLATE={description} from {period} (automatically updated - manual additions welcome)
+# PLAYLIST_DESCRIPTION_TEMPLATE={description} from {period} (automatically updated)
+# DESCRIPTION_TOP_GENRES=5
