--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "spotim8"
-version = "4.0.0"
-description = "Pandas-first Spotify Web API interface: tidy DataFrames for library + market signals."
+version = "5.0.0"
+description = "Professional Spotify library sync, playlist automation, and analytics. Tidy DataFrames, CLI, and dashboard."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -16,7 +16,8 @@ dependencies = [
 [project.optional-dependencies]
 dev = ["pytest>=8", "ruff>=0.6", "black>=24.0"]
 notebook = ["jupyter>=1.0", "matplotlib>=3.8", "seaborn>=0.13", "plotly>=5.18"]
-all = ["spotim8[dev,notebook]"]
+dashboard = ["streamlit>=1.28"]
+all = ["spotim8[dev,notebook,dashboard]"]
 
 [project.scripts]
 spotim8 = "src.core.cli:main"
